--- a/features/home/src/main/res/values/strings.xml
+++ b/features/home/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">kalambury</string>
-    <string name="code">Kod gry</string>
+    <string name="app_name">Kalambury</string>
+    <string name="code">KOD GRY</string>
     <string name="connect">Połącz</string>
     <string name="create">Stwórz</string>
     <string name="yes">Tak</string>
