+ Added info about not found lobby

--- a/features/home/src/main/res/values/strings.xml
+++ b/features/home/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="start">Start</string>
     <string name="nickname">NAZWA GRACZA</string>
     <string name="input_field_is_empty">Uzupełnj wszystkie pola</string>
+    <string name="not_found_lobby">Nie znaleziono lobby</string>
 </resources>
