+ Added Message functionality

--- a/features/lobby/src/main/res/values/strings.xml
+++ b/features/lobby/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="lobby">Lobby</string>
     <string name="start">Start</string>
+    <string name="send">Wyślij</string>
 </resources>
