+ added SplashActivity.kt with animation

--- a/features/home/src/main/res/values/strings.xml
+++ b/features/home/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="game_room">Pokój gry</string>
     <string name="code">KOD GRY</string>
     <string name="connect">Połącz</string>
-    <string name="create">Stwórz</string>
+    <string name="new_game">Nowa</string>
     <string name="yes">Tak</string>
     <string name="no">Nie</string>
 
