--- a/features/home/src/main/res/values/strings.xml
+++ b/features/home/src/main/res/values/strings.xml
@@ -8,10 +8,11 @@
     <string name="no">Nie</string>
 
     <string name="dialog_title_create_game">Czy chcesz stworzyć nową gre?</string>
-    <string name="user_name_is_empty">Nazwa gracza nie może być pusta</string>
+    <string name="user_name_is_empty">Nazwa gracza nie może być pusta.</string>
     <string name="start">Start</string>
     <string name="nickname">NAZWA GRACZA</string>
-    <string name="input_field_is_empty">Uzupełnj wszystkie pola</string>
-    <string name="not_found_game">Nie znaleziono gry</string>
+    <string name="input_field_is_empty">Uzupełnj wszystkie pola.</string>
+    <string name="not_found_game">Nie znaleziono gry.</string>
     <string name="info_about_code">Kod jest wymagany tylko do połączenia się z istniejącą grą.</string>
+    <string name="timeout_exception">Przekroczono czas połączenia.</string>
 </resources>
